--- a/package.json
+++ b/package.json
@@ -17,15 +17,10 @@
         "test": "nodeunit test"
     },
     "main" : "./lib/milter",
-    "licenses" : [
-        {
-            "type": "CCBY4.0",
-            "url": "http://creativecommons.org/licenses/by/4.0/"
-        }
-    ],
+    "license" : "CCBY4.0",
     "devDependencies": {
         "nodeunit": "*"
     },
-    "engines": ["node >=0.12.0"],
+    "engines": ["node =7.7.4"],
     "keywords": ["postfix", "milter"]
 }
