--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "milter",
     "description": "bindings for writing postfix milter daemons",
-    "version": "1.0.0",
+    "version": "7.7.4",
     "author" : "jon shusta",
     "maintainers":[
         {
@@ -17,7 +17,7 @@
         "test": "nodeunit test"
     },
     "main" : "./lib/milter",
-    "license" : "CCBY4.0",
+    "license" : "CC-BY-4.0",
     "devDependencies": {
         "nodeunit": "*"
     },
